# et-hackathon-ps7

./: .gitignore  CLAUDE.md  Makefile  README.md  demo.sh  dev  pyproject.toml  requirements.txt
data/fixtures/: anomaly_events.json  enriched_incidents.json  intel_slice.json  labelled_eval.json  mitre_tactics.json
data/fixtures/anomaly_events/: evt_0001.json  evt_0002.json  evt_0003.json  evt_0004.json  evt_0005.json  evt_0006.json  evt_0007.json  evt_0008.json  evt_0009.json  evt_0010.json  evt_0011.json  evt_0012.json  evt_0013.json  evt_0014.json  evt_0015.json  evt_0016.json  evt_0017.json  evt_0018.json  evt_0019.json  evt_0020.json
data/fixtures/enriched_incidents/: evt_0001.json  evt_0002.json  evt_0003.json  evt_0004.json  evt_0005.json  evt_0006.json  evt_0007.json  evt_0008.json  evt_0009.json  evt_0010.json  evt_0011.json  evt_0012.json  evt_0013.json  evt_0014.json  evt_0015.json  evt_0016.json  evt_0017.json  evt_0018.json  evt_0019.json  evt_0020.json
docs/: DEV-1-detection-and-spine.md  DEV-2-agent-and-dashboard.md  DEV-A-anomaly-detection.md  DEV-B-rag-agent.md  DEV-C-orchestrator-backend.md  MILESTONES.md  README.md  finalplan.md
docs/submission/: AI-SOC_Pitch_Deck.pptx
docs/superpowers/plans/: 2026-07-09-yash-issues-takeover.md  2026-07-10-multi-agent-orchestration.md  2026-07-11-real-network-identity.md
docs/superpowers/specs/: 2026-07-10-multi-agent-orchestration-design.md
engine/: README.md  RESULTS.md  fetch_unsw.py  infer.py  preprocess.py  replay.py  train.py
engine/model/: model_meta.json
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.jsx  App.tsx  index.css  main.tsx
frontend/src/components/: AgentOrchestration.tsx  AttackGraph.tsx  IncidentFeed.tsx  MetricsBar.tsx  MitreGrid.tsx
frontend/src/components/ui/: primitives.tsx
frontend/src/data/: DataService.ts  derive.ts  fixtures.ts  hashChain.test.ts  hashChain.ts  index.ts  policy.ts
frontend/src/data/http/: HttpDataService.test.ts  HttpDataService.ts
frontend/src/data/mock/: MockDataService.test.ts  MockDataService.ts
frontend/src/hooks/: useIncidents.ts
frontend/src/lib/: mitre.test.ts  mitre.ts  mitreTactics.generated.ts  orchestration.test.ts  orchestration.ts  utils.ts
frontend/src/pages/: Approvals.tsx  Audit.tsx  GraphPage.tsx  IncidentDetail.tsx  Incidents.tsx  Operations.tsx
frontend/src/types/: contracts.ts
intel/: agent.py  eval_attribution.py  fetch_sources.py  ingest.py  llm.py
orchestrator/: agents.py  audit.py  main.py  pipeline.py  playbooks.py  policy.py  schemas.py
ps7_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_agent.py  test_agents.py  test_audit.py  test_engine_infer.py  test_eval_attribution.py  test_fetch_sources.py  test_ingest.py  test_llm.py  test_main.py  test_pipeline.py  test_playbooks.py  test_policy.py  test_schemas.py
