[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ps7-orchestrator"
version = "0.1.0"
description = "PS7 SOAR orchestrator — the detection-to-response backend spine"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sse-starlette",
    "pydantic>=2",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]
# Detection engine (issue #14/#15) — ML stack, isolated from the FastAPI runtime.
# Install into a py3.12 venv:  uv pip install --python .venv scikit-learn pandas numpy joblib
engine = ["scikit-learn", "pandas", "numpy", "joblib"]

[tool.setuptools]
packages = ["orchestrator"]

[tool.pytest.ini_options]
# An editable install (`pip install -e .`) makes `orchestrator` importable everywhere —
# pytest, uvicorn, scripts, IDEs — not just under pytest. pythonpath is a fallback so the
# suite still runs on a fresh clone before the install.
pythonpath = ["."]
testpaths = ["tests"]
