[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ps7-orchestrator"
version = "0.1.0"
description = "PS7 SOAR orchestrator — the detection-to-response backend spine"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sse-starlette",
    "pydantic>=2",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]
# Detection engine (issue #14/#15) — ML stack, isolated in its own py3.12 venv
# (scikit-learn has no wheels for the system's py3.14). See engine/README.md / `make engine-setup`.
# pydantic is here because replay emits the AnomalyEvent contract from orchestrator/schemas.py.
engine = ["scikit-learn", "pandas", "numpy", "joblib", "pydantic>=2"]
intel = ["chromadb", "requests"]

[tool.setuptools]
packages = ["orchestrator", "intel"]

[tool.pytest.ini_options]
# An editable install (`pip install -e .`) makes `orchestrator` importable everywhere —
# pytest, uvicorn, scripts, IDEs — not just under pytest. pythonpath is a fallback so the
# suite still runs on a fresh clone before the install.
pythonpath = ["."]
testpaths = ["tests"]
